2010-07-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14911: Validation errors in list view (Thanks to Georg Ringer)

2010-07-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6208: zlib must be compiled in to make an extension lookup
	* Fixed bug #12322: cHash is generated when no parameters are given

2010-07-13  Francois Suter  <francois@typo3.org>

	* Fixed bug: #15054: Scheduler: BE module does not use new skin properly

2010-07-13  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #14775: Old table header styling in Extension Manager (Thanks to Ralf Büchner)
	* Fixed bug #15088: Using sprites breaks setting links to content elements (Thanks to Georg Ringer)

2010-07-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #15097: Intro looks weird with module and no submodules (Thanks to Georg Ringer)
	* Fixed bug #15073: inlineJS creates superfluous markup (Thanks to Georg Ringer)
	* Fixed bug #15103: TS Errors are hardly readable (white on yellow) (Thanks to Georg Ringer)
	* Fixed bug #15098: TS Errors should be shown with flash messages (Thanks to Georg Ringer)
	* Fixed bug #14855: Big Buttons in Page Module miss padding (Thanks to Georg Ringer)

2010-07-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15096: Missing icon for _recycler_ folders

2010-07-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #15082: [openDocs] Exception is thrown if a record isn't found

2010-07-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #1235: indexed search: garbage instead of cHash in the "path" link (thanks to Nikolas Hagelstein)

2010-07-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14970: ts browser condition results in error if browser is unknown (Thanks to Caspar Stuebs) 

2010-07-11  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14923: CleanUp: getIconImage is not replaced in Core (thanks to Steffen Ritter)
	* Follow-up to #15045: Trailing newlines after php closing tag. (Thanks to Nikolas Hagelstein)
