@@ -1,3 +1,7 @@
+2010-07-16  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #15142: [Unit tests] Remove unnecessary require_once() calls
+
 2010-07-14  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #14911: Validation errors in list view (Thanks to Georg Ringer)
